--- a/package.json
+++ b/package.json
@@ -40,14 +40,21 @@
     "@tarojs/taro-h5": "2.0.0-beta.13",
     "@tarojs/taro-qq": "2.0.0-beta.13",
     "@tarojs/taro-quickapp": "2.0.0-beta.13",
-    "@tarojs/taro-rn": "2.0.0-beta.13",
+    "@tarojs/taro-rn": "^2.0.0-beta.13",
     "@tarojs/taro-swan": "2.0.0-beta.13",
     "@tarojs/taro-tt": "2.0.0-beta.13",
     "@tarojs/taro-weapp": "2.0.0-beta.13",
     "mobx": "^4.8.0",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
-    "taro-ui": "^2.2.4"
+    "taro-ui": "^2.2.4",
+    "@tarojs/components-rn": "^2.0.0-beta.13",
+    "@tarojs/taro-router-rn": "^2.0.0-beta.13",
+    "@tarojs/taro-redux-rn": "^2.0.0-beta.13",
+    "react": "16.3.1",
+    "react-native": "0.55.4",
+    "redux": "^4.0.0",
+    "tslib": "^1.8.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
